fixup! formatting test projects

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -94,7 +94,7 @@
   </ItemGroup>
 
   <!-- Set up stylecop -->
-  <ItemGroup Condition="'$(RadarrProject)'=='true' and '$(RadarrOutputType)'!='Test'">
+  <ItemGroup Condition="'$(RadarrProject)'=='true'">
     <!-- StyleCop analysis -->
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
